# Tic-tak-toe

./: CMakeLists.txt  game_board.cpp  game_board.h  game_logic.cpp  game_logic.h  moawadito  readme.md  test_tic_tac_toe.cpp  tic_tac_toe.cpp  tic_tac_toe.h  yarab.md
.github/workflows/: main.yml
Coverage Reports/: AIPlayer.cpp.gcov  GameBoard.cpp.gcov  GameHistory.cpp.gcov  GameStateStack.cpp  UserManager.cpp.gcov
GUI/include/: TicTacToeGUI.h
GUI/src/: TicTacToeGUI.cpp
ci_cmake_config/: CMakeLists.txt
tests/integration_tests/: IntegrationTests.cpp
tests/unit_tests/: AIPlayer_test.cpp
